[package]
name = "rust-belt"
version = "1.2.0"
authors = [
    "johnthagen <johnthagen@gmail.com>",
    "theandrewdavis <theandrewdavis@gmail.com>",
    "mcdenhoed <mcdenhoed@gmail.com>",
]
edition = "2021"

[dependencies]
piston_window = "0.105.0"
piston2d-opengl_graphics = "0.69.0"
piston-music = "0.25.1"
piston2d-sprite = "0.58.0"
piston-ai_behavior = "0.31.0"
rand = "0.7.2"
