[package]
name = "rust-belt"
version = "1.2.0"
authors = [
    "johnthagen <johnthagen@gmail.com>",
    "theandrewdavis <theandrewdavis@gmail.com>",
    "mcdenhoed <mcdenhoed@gmail.com>",
]
edition = "2021"

[dependencies]
piston_window = "0.124.0"
piston2d-opengl_graphics = "0.81.0"
piston-music = "0.26.0"
piston2d-sprite = "0.66.1"
piston-ai_behavior = "0.33.0"
rand = "0.8.5"
